# Fixed [#7913] Scrollbar in Configboxes # Fixed [#7912] Scrollbar in Administrator-Template
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@9463 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/templates/khepri/css/general.css
+++ b/administrator/templates/khepri/css/general.css
@@ -30,7 +30,7 @@ body {
 
 body, td, th { font-family: Arial, Helvetica, sans-serif; }
 
-html, body { height: 100%; }
+html, body { height: 95%; }
 
 .clr { clear: both; overflow:hidden; height: 0; }
 
